Fixing the issues on Authentication page* Instagram Icon small and large screen issue and hide and show password

--- a/src/index.css
+++ b/src/index.css
@@ -9,6 +9,9 @@ body {
   background-image: url('./assets/images/authentication/login_left.png');
   background-size: cover;
   /* filter: brightness(40%); */
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-size: auto 100%;
 }
 
 .adminbgimage{
@@ -18,3 +21,4 @@ body {
   background-size: auto 100%;
   background-position: center center;
 }
+
